--- a/client/src/app/components/calificaciones-form/calificaciones-form.component.html
+++ b/client/src/app/components/calificaciones-form/calificaciones-form.component.html
@@ -11,9 +11,7 @@
       <app-menu></app-menu>
     </header>
     <form>
-      
-      
-      <div style="margin-left: 30px; margin-top: 20px;">
+      <div style="margin-left: 30px; margin-top: 20px">
         <label
           for="email"
           class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
@@ -30,9 +28,6 @@
           class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
         />
       </div>
-
-      
-
     </form>
 
     <div class="flex flex-col">
@@ -42,66 +37,94 @@
             <table class="min-w-full">
               <thead class="bg-white border-b">
                 <tr>
-                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  <th
+                    scope="col"
+                    class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+                  >
                     First Name
                   </th>
-                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  <th
+                    scope="col"
+                    class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+                  >
                     Last Name
                   </th>
-                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  <th
+                    scope="col"
+                    class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+                  >
                     Second Last Name
                   </th>
-                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  <th
+                    scope="col"
+                    class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+                  >
                     Grade
                   </th>
-  
-                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+
+                  <th
+                    scope="col"
+                    class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+                  >
                     Action
                   </th>
                 </tr>
               </thead>
-              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0];let i = index">
-                <td  class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.first_nameU }}</td>
-                <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  
-                {{ alumno.last_nameU }}
+              <tr
+                class="bg-gray-100 border-b"
+                *ngFor="let alumno of arrayAlumnos[0]; let i = index"
+              >
+                <td
+                  class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
+                >
+                  {{ alumno.first_nameU }}
                 </td>
-                <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <td
+                  class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
+                >
+                  {{ alumno.last_nameU }}
+                </td>
+                <td
+                  class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
+                >
                   {{ alumno.last_nameU2 }}
                 </td>
 
-                <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  
-                <input #myElement type="text" placeholder="Grade" style="width:80px"> 
-                  
+                <td
+                  class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
+                >
+                  <input
+                    #myElement
+                    type="text"
+                    placeholder="Grade"
+                    style="width: 80px"
+                  />
                 </td>
-         
 
-                <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <td
+                  class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
+                >
                   <!-- component -->
-                
                 </td>
 
-                <td class="text-sm text-gray-900 font-light px-4 py-4 whitespace-nowrap">
-             
-                </td>
+                <td
+                  class="text-sm text-gray-900 font-light px-4 py-4 whitespace-nowrap"
+                ></td>
               </tr>
             </table>
-            
-              <button 
-                  data-ripple-light="true"
-                  data-popover-target="popover"
-                  (click)="saveCalificacion()"
-                  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-                  >
-                  AGREGAR
-                  </button>
-            
+
+            <button
+              data-ripple-light="true"
+              data-popover-target="popover"
+              (click)="saveCalificacion()"
+              class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+            >
+              Agregar
+            </button>
           </div>
         </div>
       </div>
-  </div>
-
+    </div>
 
     <!-- 
     <form [formGroup]="formulario">
@@ -121,9 +144,5 @@
       <button type="submit" [disabled]="formulario.invalid">Enviar</button>
     </form>
     -->
-    
   </body>
 </html>
-
-
-
