--- a/client/src/app/components/grupos/grupos.component.html
+++ b/client/src/app/components/grupos/grupos.component.html
@@ -13,7 +13,7 @@
         
       <button style="margin-bottom: 20px;" routerLink="/clases-list" data-ripple-light="true" data-popover-target="popover"
       class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
-      AGREGAR NUEVO GRUPO
+      Agregar nuevo grupo
     </button>
         <div class="flex flex-col">
        
