--- a/client/src/app/components/horarios-form/horarios-form.component.html
+++ b/client/src/app/components/horarios-form/horarios-form.component.html
@@ -10,7 +10,7 @@
     <header>
       <app-menu></app-menu>
     </header>
-    <h4 style="text-align: center">CREAR HORARIOS</h4>
+    <h4 style="text-align: center">Crear horarios</h4>
     <form>
      
 
