--- a/client/src/app/components/inicio/inicio.component.html
+++ b/client/src/app/components/inicio/inicio.component.html
@@ -57,13 +57,6 @@
 
     <div class="grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5">
       <div class="flex flex-col justify-center col-span-1 text-center lg:text-start">
-        <div class="flex items-center justify-center mb-4 lg:justify-normal">
-          <img class="h-5"
-            src="https://raw.githubusercontent.com/Loopple/loopple-public-assets/main/motion-tailwind/img/logos/logo-1.png"
-            alt="logo">
-          <h4 class="ml-2 text-sm font-bold tracking-widest text-primary uppercase">Explore the Latest Tailwind Template
-          </h4>
-        </div>
         <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">INNOVA LANGUAGE SOLUTIONS</h1>
         <p class="mb-6 text-base font-normal leading-7 lg:w-3/4 text-grey-900" style="margin-left:55px">
           Say goodbye to endless hours spent on building templates from scratch. Experience the quickest, most
@@ -89,10 +82,29 @@
           
         </div>        
         <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
-          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">ENGINNERING</span></h2>
-          <p class="mt-4 text-gray-600">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem modi
-            reprehenderit vitae exercitationem aliquid dolores ullam temporibus enim expedita aperiam mollitia iure
-            consectetur dicta tenetur, porro consequuntur saepe accusantium consequatur.</p>
+          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">Engineering</span></h2>
+          <p class="mt-4 text-gray-600">Este programa integral busca capacitar ingenieros de diversas disciplinas, proporcionándoles habilidades lingüísticas para comunicarse efectivamente en el exigente entorno de la industria y la manufactura. 
+            Se enfoca en el desarrollo equilibrado de expresión oral, comprensión auditiva, lectura y escritura, con énfasis en la terminología específica de la ingeniería. 
+            El objetivo principal es que los participantes no solo dominen el inglés, sino que también puedan aplicar estas habilidades de manera práctica y especializada en sus áreas de expertise.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- component -->
+  <div>
+    <div class="bg-gray-100 lg:py-12">
+      <div class="bg-white lg:mx-8 lg:flex lg:max-w-5xl lg:shadow-lg lg:rounded-lg">
+        <div class="lg:w-1/2">
+          <div class="h-64 bg-cover lg:rounded-lg lg:h-full"
+            style="background-image:url('https://images.unsplash.com/photo-1497493292307-31c376b6e479?ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80')">
+          </div>
+        </div>
+        <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
+          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">Science</span></h2>
+          <p class="mt-4 text-gray-600">Este programa de instrucción está diseñado para dotar a científicos de diversas disciplinas con habilidades lingüísticas esenciales para una comunicación efectiva en un entorno científico global. 
+            Se centra en hablar, escuchar, leer y escribir, con énfasis en la terminología científica especializada. El objetivo es proporcionar herramientas lingüísticas para comunicar investigaciones, colaborar en equipos internacionales y participar en discusiones científicas globales. 
+            Con un enfoque práctico, garantiza que los científicos puedan aplicar estas habilidades con precisión en sus campos de estudio.</p>
 
         </div>
       </div>
@@ -109,30 +121,10 @@
           </div>
         </div>
         <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
-          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">SCIENCE</span></h2>
-          <p class="mt-4 text-gray-600">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem modi
-            reprehenderit vitae exercitationem aliquid dolores ullam temporibus enim expedita aperiam mollitia iure
-            consectetur dicta tenetur, porro consequuntur saepe accusantium consequatur.</p>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- component -->
-  <div>
-    <div class="bg-gray-100 lg:py-12">
-      <div class="bg-white lg:mx-8 lg:flex lg:max-w-5xl lg:shadow-lg lg:rounded-lg">
-        <div class="lg:w-1/2">
-          <div class="h-64 bg-cover lg:rounded-lg lg:h-full"
-            style="background-image:url('https://images.unsplash.com/photo-1497493292307-31c376b6e479?ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80')">
-          </div>
-        </div>
-        <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
-          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">MINING</span></h2>
-          <p class="mt-4 text-gray-600">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem modi
-            reprehenderit vitae exercitationem aliquid dolores ullam temporibus enim expedita aperiam mollitia iure
-            consectetur dicta tenetur, porro consequuntur saepe accusantium consequatur.</p>
+          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">Mining</span></h2>
+          <p class="mt-4 text-gray-600">Este programa de formación está diseñado para equipar a profesionales de la industria minera con habilidades lingüísticas para una comunicación efectiva en un entorno globalizado y diverso. 
+            Se enfoca en hablar, escuchar, leer y escribir, con atención en la terminología minera. El objetivo es capacitar a los participantes para comunicarse fluidamente en un entorno industrial exigente, aplicando estas habilidades en contextos específicos de la minería. 
+            Promueve la comunicación efectiva en equipos multidisciplinarios y proyectos mineros internacionales.</p>
           <div class="mt-8">
             <a href="#" class="bg-gray-900 text-gray-100 px-5 py-3 font-semibold rounded">Start Now</a>
           </div>
@@ -151,7 +143,7 @@
           </div>
         </div>
         <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
-          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">TRAVELING</span></h2>
+          <h2 class="text-3xl text-gray-800 font-bold"><span class="text-indigo-600">Traveling</span></h2>
           <p class="mt-4 text-gray-600">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem modi
             reprehenderit vitae exercitationem aliquid dolores ullam temporibus enim expedita aperiam mollitia iure
             consectetur dicta tenetur, porro consequuntur saepe accusantium consequatur.</p>
