--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -9,7 +9,7 @@
     <header>
       <app-menu></app-menu>
     </header>
-    <h4 style="text-align: center">CALIFICACIONES</h4>
+    <h4 style="text-align: center">Calificaciones</h4>
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <ul
@@ -143,7 +143,7 @@
                       data-popover-target="popover"
                       class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                     >
-                      GRAFICA
+                      Gráfica
                     </button>
                   </td>
                 </tr>
