--- a/client/src/app/components/maestros-list/maestros-list.component.html
+++ b/client/src/app/components/maestros-list/maestros-list.component.html
@@ -10,7 +10,7 @@
   <header>
     <app-menu></app-menu>
   </header>
-  <h4 style="text-align: center">MAESTROS</h4>
+  <h4 style="text-align: center">Maestros</h4>
   <input
   type="text" style="height: 35px; width: 800px; margin-left: 20%;"placeholder="Search" [(ngModel)]="filterPost"
   class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
@@ -67,7 +67,7 @@
                   data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                   >
-                  UPDATE
+                  Update
                   </button>
                 </td>
 
@@ -78,7 +78,7 @@
                   class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                   (click)="deleteMaestro(maestro.id_user)"
                   >
-                  DELETE
+                  Delete
                   </button>
                 </td>
               </tr>
