--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,216 +1,222 @@
 <!-- component -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <div class="nav-wrapper" style="background-color: #0066ff">
-        <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper" style="background-color: #0066ff">
+          <a routerLink="/" class="brand-logo"
+            ><img
+              src="https://i.imgur.com/1NA0X3h.jpg"
+              alt="logo"
+              style="width: px; height: 62px; margin-left: 5px"
+          /></a>
 
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+          <ul class="right hide-on-med-and-down">
+            <li style="margin-right: 40px">{{ nombreUsuario }}</li>
+            <li *ngIf="!isLogin"><a routerLink="/login">Log In</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- component -->
+    <div class="bg-white dark:bg-gray-900">
+      <div class="flex justify-center h-screen">
+        <div
+          class="hidden bg-cover lg:block lg:w-3/4"
+          style="
+            background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+          "
         >
-        <ul class="right hide-on-med-and-down">
-          <li style="margin-right: 40px;">{{nombreUsuario}}</li>
-          <li *ngIf="!isLogin"><a routerLink="/login">Log In</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <!-- component -->
-  <div class="bg-white dark:bg-gray-900">
-    <div class="flex justify-center h-screen">
-      <div
-        class="hidden bg-cover lg:block lg:w-3/4"
-        style="
-          background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
-        "
-      >
-        <div class="flex items-center h-full px-20 ">
-          <div>
-            <h2 class="text-4xl font-bold text-white">Register</h2>
-  
-            <p class="max-w-xl mt-3 text-gray-300">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In autem
-              ipsa, nulla laboriosam dolores, repellendus perferendis libero
-              suscipit nam temporibus molestiae
-            </p>
+          <div class="flex items-center h-full px-20">
+            <div>
+              <h2 class="text-4xl font-bold text-white">Register</h2>
+
+              <p class="max-w-xl mt-3 text-gray-300">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. In
+                autem ipsa, nulla laboriosam dolores, repellendus perferendis
+                libero suscipit nam temporibus molestiae
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-  
-      <div
-        class="flex items-center w-full px-6 mx-auto lg:w-2/6"
-        style="margin-top: 80px"
-      >
-        <div class="flex-1">
-          <div class="mt-1" style="margin-bottom:80px">
-            <form>
-              <div>
-                <label
-                  
-                  class="block mb-1 text-sm text-gray-600 dark:text-gray-200"
-                  >First Name</label
-                >
-                <input
-                  type="text"
-                  name="first_name"
-                  [(ngModel)]="usuario.first_nameU"
-                  id="password"
-                  style="height: 35px;"
-                  placeholder="Your First Name"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-              </div>
-              <div>
-                <label
-                 
-                  class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                  >Last Name</label
-                >
-                <input
-                  type="text"
-                  name="last_name"
-                  [(ngModel)]="usuario.last_nameU"
-                  style="height: 35px;"
-                  id="password"
-                  placeholder="Your Last Name"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-              </div>
-  
-              <div class="mt-1">
-                <div class="flex justify-between mb-2"></div>
-                <div class="flex justify-between mb-2">
-                  <label
-                    for="password"
-                    class="text-sm text-gray-600 dark:text-gray-200"
-                    >Second Last Name
-                  </label>
-                </div>
-                <input
-                  type="text"
-                  name="second_last_name"
-                  [(ngModel)]="usuario.last_nameU2"
-                  id="password"
-                  style="height: 35px;"
-                  placeholder="Your Second Last Name"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-                <div class="flex justify-between mb-2">
-                  <label
-                    
-                    class="text-sm text-gray-600 dark:text-gray-200"
-                    >Telephone</label
-                  >
-                </div>
-  
-                <input
-                  type="text"
-                  name="telephone"
-                  [(ngModel)]="usuario.telephoneU"
-                  style="height: 35px;"
-                  id="telephone"
-                  placeholder="Your telephone"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-              </div>
-              <div class="mt-1">
-               
-                <div class="flex justify-between mb-2">
-                  <label
-                    for="password"
-                    class="text-sm text-gray-600 dark:text-gray-200"
-                    >Email</label
-                  >
-                </div>
-                <input
-                  type="email"
-                  name="email"
-                  [(ngModel)]="usuario.email"
-                  id="password"
-                  placeholder="Your Email"
-                  style="height: 35px;"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-              </div>
-              <div class="mt-1">
-               
-                <div class="flex justify-between mb-2">
-                  <label
-                    for="password"
-                    class="text-sm text-gray-600 dark:text-gray-200"
-                    >Password</label
-                  >
-                </div>
-                <input
-                  type="password"
-                  
-                  name="password"
-                  [(ngModel)]="usuario.password"
-                  id="password"
-                  placeholder="Your Password"
-                  style="height: 35px;"
-                  class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                />
-                <div>
-                  <button (click)="generatePassword()"
-                  class="w-30 px-2 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50"
-                  >Generar Contraseña</button>
-                  <p *ngIf="generatedPassword">Contraseña Generada: {{ generatedPassword }}</p>
-                </div>
-                <div >
-                  
-                </div>
-              </div>
-              
-              <div *ngIf="isAdmin" class="select" style="margin-top:10px; margin-bottom: 10px;">
-                <select [(ngModel)]="usuario.id_rol" name="id_rol">
-                  <option value="1">Alumno</option>
-                  <option value="2">Maestro</option>
-                  <option value="3">Administrador</option>
-                </select>
-              </div>
-              <br>
-              <div  class="select" style="margin-top:5px; margin-bottom: 5px;" *ngIf="edit&&isAdmin">
-                <select [(ngModel)]="usuario.status" name="status">
-                  <option value="Activo">Activo</option>
-                  <option value="Inactivo">Inactivo</option>
-                  
-                </select>
-              </div>
-  
-              <div class="mt-3">
-                <button 
-                  (click)=" edit ? updateUser():saveUser()"
-                  class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50"
-                >
-                  Sign in
-                </button>
 
-               
-                
-              </div>
-            </form>
-  
+        <div
+          class="flex items-center w-full px-6 mx-auto lg:w-2/6"
+          style="margin-top: 80px"
+        >
+          <div class="flex-1">
+            <div class="mt-1" style="margin-bottom: 80px">
+              <form>
+                <div>
+                  <label
+                    class="block mb-1 text-sm text-gray-600 dark:text-gray-200"
+                    >First Name</label
+                  >
+                  <input
+                    type="text"
+                    name="first_name"
+                    [(ngModel)]="usuario.first_nameU"
+                    id="password"
+                    style="height: 35px"
+                    placeholder="Your First Name"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                </div>
+                <div>
+                  <label
+                    class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+                    >Last Name</label
+                  >
+                  <input
+                    type="text"
+                    name="last_name"
+                    [(ngModel)]="usuario.last_nameU"
+                    style="height: 35px"
+                    id="password"
+                    placeholder="Your Last Name"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                </div>
+
+                <div class="mt-1">
+                  <div class="flex justify-between mb-2"></div>
+                  <div class="flex justify-between mb-2">
+                    <label
+                      for="password"
+                      class="text-sm text-gray-600 dark:text-gray-200"
+                      >Second Last Name
+                    </label>
+                  </div>
+                  <input
+                    type="text"
+                    name="second_last_name"
+                    [(ngModel)]="usuario.last_nameU2"
+                    id="password"
+                    style="height: 35px"
+                    placeholder="Your Second Last Name"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                  <div class="flex justify-between mb-2">
+                    <label class="text-sm text-gray-600 dark:text-gray-200"
+                      >Telephone</label
+                    >
+                  </div>
+
+                  <input
+                    type="text"
+                    name="telephone"
+                    [(ngModel)]="usuario.telephoneU"
+                    style="height: 35px"
+                    id="telephone"
+                    placeholder="Your telephone"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                </div>
+                <div class="mt-1">
+                  <div class="flex justify-between mb-2">
+                    <label
+                      for="password"
+                      class="text-sm text-gray-600 dark:text-gray-200"
+                      >Email</label
+                    >
+                  </div>
+                  <input
+                    type="email"
+                    name="email"
+                    [(ngModel)]="usuario.email"
+                    id="password"
+                    placeholder="Your Email"
+                    style="height: 35px"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                </div>
+                <div class="mt-1">
+                  <div class="flex justify-between mb-2">
+                    <label
+                      for="password"
+                      class="text-sm text-gray-600 dark:text-gray-200"
+                      >Password</label
+                    >
+                  </div>
+                  <input
+                    type="password"
+                    name="password"
+                    [(ngModel)]="usuario.password"
+                    id="password"
+                    placeholder="Your Password"
+                    style="height: 35px"
+                    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                  />
+                  <div>
+                    <button
+                      (click)="generatePassword()"
+                      class="w-30 px-2 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                    >
+                      Generar Contraseña
+                    </button>
+                    <p *ngIf="generatedPassword">
+                      Contraseña Generada: {{ generatedPassword }}
+                    </p>
+                  </div>
+                  <div></div>
+                </div>
+
+                <div
+                  *ngIf="isAdmin"
+                  class="select"
+                  style="margin-top: 10px; margin-bottom: 10px"
+                >
+                  <select [(ngModel)]="usuario.id_rol" name="id_rol">
+                    <option value="1">Alumno</option>
+                    <option value="2">Maestro</option>
+                    <option value="3">Administrador</option>
+                  </select>
+                </div>
+                <br />
+                <div
+                  class="select"
+                  style="margin-top: 5px; margin-bottom: 5px"
+                  *ngIf="edit && isAdmin"
+                >
+                  <select [(ngModel)]="usuario.status" name="status">
+                    <option value="Activo">Activo</option>
+                    <option value="Inactivo">Inactivo</option>
+                  </select>
+                </div>
+
+                <div class="mt-3">
+                  <button
+                    (click)="edit ? updateUser() : saveUser()"
+                    class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+                  >
+                    Sign in
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
-  <link rel="stylesheet"
-    href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-  
-   
-</body>
+    <link
+      rel="stylesheet"
+      href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css"
+    />
+  </body>
 </html>
-
 
 <!-- 
 <body class="font-mono bg-gray-400">
