--- a/client/src/app/components/reportes/reportes.component.html
+++ b/client/src/app/components/reportes/reportes.component.html
@@ -9,7 +9,7 @@
   <header>
     <app-menu></app-menu>
   </header>
-    <h4 style="text-align: center">REPORTES</h4>
+    <h4 style="text-align: center">Reportes</h4>
   <div class="rounded-lg bg-gray-200 overflow-hidden shadow divide-y divide-gray-200 sm:divide-y-0 sm:grid sm:grid-cols-2 sm:gap-px">
       <div class="rounded-tl-lg rounded-tr-lg sm:rounded-tr-none relative group bg-white p-6 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-500">
         <div>
