--- a/client/src/app/components/update-form/update-form.component.html
+++ b/client/src/app/components/update-form/update-form.component.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <app-menu></app-menu>
-  </header>
-  <div class="field">
-    <label class="label">First Name</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input" type="text" placeholder="Text input">
-      <span class="icon is-small is-left">
-        <i class="fa solid fa-user"></i>
-      </span>
-      
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <app-menu></app-menu>
+    </header>
+    <div class="field">
+      <label class="label">First Name</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input" type="text" placeholder="Text input" />
+        <span class="icon is-small is-left">
+          <i class="fa solid fa-user"></i>
+        </span>
+      </div>
     </div>
-  </div>
-  <div class="field">
-    <label class="label"> Last Name</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input" type="text" placeholder="Text input">
-      <span class="icon is-small is-left">
-        <i class="fa solid fa-user"></i>
-      </span>
-      
+    <div class="field">
+      <label class="label"> Last Name</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input" type="text" placeholder="Text input" />
+        <span class="icon is-small is-left">
+          <i class="fa solid fa-user"></i>
+        </span>
+      </div>
     </div>
-  </div>
-  <div class="field">
-    <label class="label"> Second Last Name</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input" type="text" placeholder="Text input">
-      <span class="icon is-small is-left">
-        <i class="fa solid fa-user"></i>
-      </span>
-      
+    <div class="field">
+      <label class="label"> Second Last Name</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input" type="text" placeholder="Text input" />
+        <span class="icon is-small is-left">
+          <i class="fa solid fa-user"></i>
+        </span>
+      </div>
     </div>
-  </div>
-  <!--
+    <!--
   <div class="field">
     <label class="label">Username</label>
     <div class="control has-icons-left has-icons-right">
@@ -55,40 +52,33 @@
   </div>
   -->
 
+    <div class="field">
+      <label class="label">Email</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input is-danger" type="email" placeholder="Email input" />
+        <span class="icon is-small is-left">
+          <i class="fas fa-envelope"></i>
+        </span>
+      </div>
+    </div>
 
-  <div class="field">
-    <label class="label">Email</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input is-danger" type="email" placeholder="Email input">
-      <span class="icon is-small is-left">
-        <i class="fas fa-envelope"></i>
-      </span>
+    <div class="field">
+      <label class="label">Telephone</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input" type="text" placeholder="Text input" />
+        <span class="icon is-small is-left">
+          <i class="fa solid fa-phone"></i>
+        </span>
+      </div>
+    </div>
 
+    <div class="field is-grouped">
+      <div class="control">
+        <button class="button is-link">Submit</button>
+      </div>
+      <div class="control">
+        <button class="button is-link is-light">Cancel</button>
+      </div>
     </div>
-   
-  </div>
-  
-  <div class="field">
-    <label class="label">Telephone</label>
-    <div class="control has-icons-left has-icons-right">
-      <input class="input" type="text" placeholder="Text input">
-      <span class="icon is-small is-left">
-        <i class="fa solid fa-phone"></i>
-      </span>
-      
-    </div>
-  </div>
-  
-  
-
-  
-  <div class="field is-grouped">
-    <div class="control">
-      <button class="button is-link">Submit</button>
-    </div>
-    <div class="control">
-      <button class="button is-link is-light">Cancel</button>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
