--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -15,13 +15,13 @@
     <div *ngFor="let file of arrayFiles; let i = index">
       <div class="bg-gray-100 lg:py-12">
         <div
-          class="bg-white lg:mx-6 lg:flex lg:max-w-4xl lg:shadow-lg lg:rounded-lg"
+          class="bg-white lg:mx-4 lg:flex lg:max-w-4xl lg:shadow-lg lg:rounded-lg"
         >
           <div class="lg:w-1/2">
             <div
-              class="h-64 bg-cover lg:rounded-lg lg:h-full"
+              class="file-image"
               style="
-                background-image: url('https://images.unsplash.com/photo-1497493292307-31c376b6e479?ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80');
+                background-image: url('https://cdn-icons-png.flaticon.com/512/2338/2338582.png'); 
               "
             ></div>
           </div>
@@ -55,7 +55,6 @@
         </div>
       </div>
     </div>
-    <br />
 
     <br />
 
