Se pueden subir archivos mp3, mp4, pdf, jpg, png, Word, mpeg y PowerPoint a la plataforma

--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -67,7 +67,7 @@
         name="files"
         (change)="selectFiles($event)"
         multiple
-        accept=".pdf, .mp3"
+        accept=".pdf, .mp3, .jpg, .png, .docx, .mp4, .mpeg, .pptx"
       />
 
       <p id="file-name"></p>
