Diseño del submenú de Etiquetas casi completo

--- a/client/src/app/components/tag-manager/tag-manager-delete-tag/tag-manager-delete-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-delete-tag/tag-manager-delete-tag.component.html
@@ -1,12 +1,17 @@
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-white shadow sm:rounded-lg">
-    <div class="px-4 py-5 sm:p-6">
-      <h3 class="text-lg leading-6 font-medium text-gray-900">Delete your account</h3>
-      <div class="mt-2 max-w-xl text-sm text-gray-500">
-        <p>Once you delete your account, you will lose all data associated with it.</p>
-      </div>
-      <div class="mt-5">
-        <button type="button" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">Delete account</button>
-      </div>
-    </div>
+<div class="px-4 py-4 sm:p-6">
+  <div>
+    <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a borrar:</label>
+    <select id="location" name="location" [(ngModel)]="selectedOption" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+      <option disabled selected value="">Selecciona una opción</option>
+      <option>8A</option>
+      <option>8B</option>
+      <option>Conversation</option>
+    </select>
+  </div>
+  <div class="mt-2 max-w-xl text-sm text-gray-500" *ngIf="selectedOption">
+    <p>Una vez que borres la etiqueta, se desasignarán todas las etiquetas a los archivos</p>
+  </div>
+  <div class="mt-5" *ngIf="selectedOption">
+    <button type="button" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">Borrar etiqueta</button>
+  </div>
 </div>
