--- a/client/src/app/components/tag-manager/tag-manager.component.html
+++ b/client/src/app/components/tag-manager/tag-manager.component.html
@@ -9,11 +9,11 @@
         <select id="tabs" name="tabs" class="block w-full focus:ring-indigo-500 border-gray-300 rounded-md">
           <option>Crear etiqueta</option>
     
-          <option>Company</option>
+          <option>Editar etiqueta</option>
     
-          <option>Team Members</option>
+          <option>Borrar etiqueta</option>
     
-          <option>Billing</option>
+          <option>Asignar etiqueta(s)</option>
         </select>
       </div>
       <div class="hidden sm:block">
