--- a/client/src/app/components/tag-manager/tag-manager-assign-tags/tag-manager-assign-tags.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-assign-tags/tag-manager-assign-tags.component.html
@@ -1,37 +1,33 @@
-<fieldset>
-    <legend class="sr-only">Privacy setting</legend>
-    <div class="bg-white rounded-md -space-y-px">
-      <!-- Checked: "bg-indigo-50 border-indigo-200 z-10", Not Checked: "border-gray-200" -->
-      <label class="rounded-tl-md rounded-tr-md relative border p-4 flex cursor-pointer focus:outline-none">
-        <input type="radio" name="privacy-setting" value="Public access" class="h-4 w-4 mt-0.5 cursor-pointer text-indigo-600 border-gray-300 focus:ring-indigo-500" aria-labelledby="privacy-setting-0-label" aria-describedby="privacy-setting-0-description">
-        <div class="ml-3 flex flex-col">
-          <!-- Checked: "text-indigo-900", Not Checked: "text-gray-900" -->
-          <span id="privacy-setting-0-label" class="block text-sm font-medium"> Public access </span>
-          <!-- Checked: "text-indigo-700", Not Checked: "text-gray-500" -->
-          <span id="privacy-setting-0-description" class="block text-sm"> This project would be available to anyone who has the link </span>
-        </div>
-      </label>
-  
-      <!-- Checked: "bg-indigo-50 border-indigo-200 z-10", Not Checked: "border-gray-200" -->
-      <label class="relative border p-4 flex cursor-pointer focus:outline-none">
-        <input type="radio" name="privacy-setting" value="Private to Project Members" class="h-4 w-4 mt-0.5 cursor-pointer text-indigo-600 border-gray-300 focus:ring-indigo-500" aria-labelledby="privacy-setting-1-label" aria-describedby="privacy-setting-1-description">
-        <div class="ml-3 flex flex-col">
-          <!-- Checked: "text-indigo-900", Not Checked: "text-gray-900" -->
-          <span id="privacy-setting-1-label" class="block text-sm font-medium"> Private to Project Members </span>
-          <!-- Checked: "text-indigo-700", Not Checked: "text-gray-500" -->
-          <span id="privacy-setting-1-description" class="block text-sm"> Only members of this project would be able to access </span>
-        </div>
-      </label>
-  
-      <!-- Checked: "bg-indigo-50 border-indigo-200 z-10", Not Checked: "border-gray-200" -->
-      <label class="rounded-bl-md rounded-br-md relative border p-4 flex cursor-pointer focus:outline-none">
-        <input type="radio" name="privacy-setting" value="Private to you" class="h-4 w-4 mt-0.5 cursor-pointer text-indigo-600 border-gray-300 focus:ring-indigo-500" aria-labelledby="privacy-setting-2-label" aria-describedby="privacy-setting-2-description">
-        <div class="ml-3 flex flex-col">
-          <!-- Checked: "text-indigo-900", Not Checked: "text-gray-900" -->
-          <span id="privacy-setting-2-label" class="block text-sm font-medium"> Private to you </span>
-          <!-- Checked: "text-indigo-700", Not Checked: "text-gray-500" -->
-          <span id="privacy-setting-2-description" class="block text-sm"> You are the only one able to access this project </span>
-        </div>
-      </label>
+<div style="overflow-y: auto; max-height: 360px; padding-right: 15px;">
+  <div>
+    <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a asignar a los archivos:</label>
+    <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
+            (change)="onSelectOption()">
+      <option></option>
+      <option>8A</option>
+      <option>8B</option>
+      <option>Conversation</option>
+    </select>
+  </div>
+  <br />
+  <fieldset class="members-fieldset" *ngIf="optionSelected">
+    <legend class="text-lg font-medium text-gray-900">Selecciona el o los archivos</legend>
+    <div class="members-list">
+      <div class="member">
+        <input id="file-1" name="file-1" type="checkbox" class="member-checkbox" (change)="checkIfChecked()">
+        <label for="file-1" class="member-label">Archivo 1</label>
+      </div>
+      <div class="member">
+        <input id="file-2" name="file-2" type="checkbox" class="member-checkbox" (change)="checkIfChecked()">
+        <label for="file-2" class="member-label">Archivo 2</label>
+      </div>
+      <div class="member">
+        <input id="file-3" name="file-3" type="checkbox" class="member-checkbox" (change)="checkIfChecked()">
+        <label for="file-3" class="member-label">Archivo 3</label>
+      </div>
     </div>
   </fieldset>
+  <br />
+  <button *ngIf="atLeastOneChecked" type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200">Asignar etiqueta(s)</button>
+</div>
+
