--- a/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
+++ b/client/src/app/components/tag-manager/tag-manager-edit-tag/tag-manager-edit-tag.component.html
@@ -1,8 +1,44 @@
-<div>
-    <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
-    <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-      <option>United States</option>
-      <option selected>Canada</option>
-      <option>Mexico</option>
+<div style="overflow-y: auto; max-height: 360px; padding-left: 15px; padding-right: 15px;">
+  <br />
+  <div>
+    <label for="location" class="block text-sm font-medium text-gray-700">Seleccione la etiqueta a editar:</label>
+    <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
+    (change)="onSelectOption()">
+      <option></option>
+      <option>8A</option>
+      <option>8B</option>
+      <option>Conversation</option>
     </select>
   </div>
+  <br />
+  <ng-container *ngIf="optionSelected">
+    <div class="relative border border-gray-300 rounded-md px-4 py-2 shadow-sm focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+      <label for="name" class="absolute -top-2 left-2 -mt-px inline-block px-1 bg-white text-xs font-medium text-gray-900">Nombre de la etiqueta</label>
+      <input type="text" name="name" id="name" class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" placeholder="Inserte aquí el nuevo nombre de la etiqueta">
+    </div>
+    <br />
+    <div>
+      <label for="location" class="block text-sm font-medium text-gray-700">Selecciona la nueva categoría para la etiqueta: </label>
+      <select id="location" name="location" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onCategoryChange($event)">
+        <option disabled selected value="">Selecciona una opción</option>
+        <option>Nuevo curso de idiomas</option>
+        <option>Nuevo módulo para curso de idiomas</option>
+        <option>Nuevo submódulo para curso de idiomas</option>
+      </select>
+    </div>
+    <br />
+    <div *ngIf="selectedCategory === 'Nuevo módulo para curso de idiomas' || selectedCategory === 'Nuevo submódulo para curso de idiomas'">
+      <label for="course" class="block text-sm font-medium text-gray-700">Selecciona el curso al que pertenece el módulo: </label>
+      <select id="course" name="course" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" (change)="onCourseChange($event)">
+        <option disabled selected value="">Selecciona una opción</option>
+        <option>Inglés</option>
+        <option>Francés</option>
+        <option>Español</option>
+      </select>
+    </div>
+    <br />
+    <button type="button" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200" *ngIf="selectedCategory === 'Nuevo curso de idiomas' || ((selectedCategory === 'Nuevo módulo para curso de idiomas' || selectedCategory === 'Nuevo submódulo para curso de idiomas') && selectedCourse)">Guardar cambios</button>
+  </ng-container>
+</div>
+
+
